deploy/ClusterIP/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-demo
  namespace: kubernetes-demo-cluster-ip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-demo
  template:
    metadata:
      labels:
        app: kubernetes-demo
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: kubernetes-demo
        name: kubernetes-demo
        image: kubernetesdemo:0.0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
