deploy/ClusterIP/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo
  namespace: kubernetes-demo-cluster-ip
spec:
  selector:
    app: kubernetes-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
